2010-10-13  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/control/LttngSyntheticEventProvider.java: Removed unecessary ACK event
	* src/org/eclipse/linuxtools/lttng/event/LttngSyntheticEvent.java: Removed unecessary ACK event
	* src/org/eclipse/linuxtools/lttng/state/model/LttngExecutionState.java (toString): Added 
	* src/org/eclipse/linuxtools/lttng/state/model/LttngProcessState.java (toString): Added
	* src/org/eclipse/linuxtools/lttng/trace/LTTngTrace.java: Cleanup comment 

2010-09-17  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/control/LttngSyntheticEventProvider.java: Adjusted to new handleData() API
	* src/org/eclipse/linuxtools/lttng/event/LttngEvent.java: Adjusted to new handleData() API
	* src/org/eclipse/linuxtools/lttng/request/LttngSyntEventRequest.java: Adjusted to new handleData() API
	* src/org/eclipse/linuxtools/lttng/state/experiment/StateExperimentManager.java: Adjusted to new handleData() API
	* src/org/eclipse/linuxtools/lttng/state/trace/StateTraceManager.java: Adjusted to new handleData() API
	* src/org/eclipse/linuxtools/lttng/trace/LTTngTrace.java: Adjusted to new handleData() API

2010-09-15  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/trace/LTTngExperiment.java: ExecutionType update
	* src/org/eclipse/linuxtools/lttng/state/experiment/StateExperimentManager.java: ExecutionType update
	* src/org/eclipse/linuxtools/lttng/request/LttngSyntEventRequest.java: ExecutionType update
	* src/org/eclipse/linuxtools/lttng/control/LttngSyntheticEventProvider.java: ExecutionType update

2010-09-09  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/lttng/trace/LTTngTrace.java: Fixed a ranking problem on a seek()
	* src/org/eclipse/linuxtools/lttng/trace/LTTngExperiment.java: New class

2010-07-29  Francois Chouinard  <fchouinard@gmail.com>
